{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 468,
  "lineage": "292dfd15-e3a7-00eb-5c78-6197ce9b7597",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bb916888c3d3fe7",
            "arn": "arn:aws:ec2:us-east-1:145702441124:elastic-ip/eipalloc-03bb916888c3d3fe7",
            "association_id": "eipassoc-0f1c1a036ff3610aa",
            "domain": "vpc",
            "id": "eipalloc-03bb916888c3d3fe7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d8b1904453a7d398",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-228-76-71.compute-1.amazonaws.com",
            "public_ip": "3.228.76.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devlaketoco-nat-eip-1"
            },
            "tags_all": {
              "Name": "devlaketoco-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devlake_igw",
            "aws_vpc.devlake_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f09f33b6f230d67e",
            "arn": "arn:aws:ec2:us-east-1:145702441124:elastic-ip/eipalloc-0f09f33b6f230d67e",
            "association_id": "eipassoc-0ab81c1e4e6997a3a",
            "domain": "vpc",
            "id": "eipalloc-0f09f33b6f230d67e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fa0671b38ea6c780",
            "private_dns": "ip-10-0-2-178.ec2.internal",
            "private_ip": "10.0.2.178",
            "public_dns": "ec2-34-198-110-245.compute-1.amazonaws.com",
            "public_ip": "34.198.110.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devlaketoco-nat-eip-2"
            },
            "tags_all": {
              "Name": "devlaketoco-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devlake_igw",
            "aws_vpc.devlake_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devlake_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:internet-gateway/igw-0a2b16ccf5ca1b85a",
            "id": "igw-0a2b16ccf5ca1b85a",
            "owner_id": "145702441124",
            "tags": {
              "Name": "devlaketoco-igw"
            },
            "tags_all": {
              "Name": "devlaketoco-igw"
            },
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bb916888c3d3fe7",
            "association_id": "eipassoc-0f1c1a036ff3610aa",
            "connectivity_type": "public",
            "id": "nat-0d9516df0b308c1a2",
            "network_interface_id": "eni-0d8b1904453a7d398",
            "private_ip": "10.0.1.50",
            "public_ip": "3.228.76.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6790c1433e0e0f0",
            "tags": {
              "Name": "devlaketoco-nat-gateway-1"
            },
            "tags_all": {
              "Name": "devlaketoco-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.devlake_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f09f33b6f230d67e",
            "association_id": "eipassoc-0ab81c1e4e6997a3a",
            "connectivity_type": "public",
            "id": "nat-01dd6516616c96114",
            "network_interface_id": "eni-0fa0671b38ea6c780",
            "private_ip": "10.0.2.178",
            "public_ip": "34.198.110.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb2243349e6f2a92",
            "tags": {
              "Name": "devlaketoco-nat-gateway-2"
            },
            "tags_all": {
              "Name": "devlaketoco-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.devlake_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:route-table/rtb-059b06a9c9d4dd519",
            "id": "rtb-059b06a9c9d4dd519",
            "owner_id": "145702441124",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9516df0b308c1a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devlaketoco-private-rt-1"
            },
            "tags_all": {
              "Name": "devlaketoco-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.devlake_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:route-table/rtb-0a121595cfb7e8357",
            "id": "rtb-0a121595cfb7e8357",
            "owner_id": "145702441124",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01dd6516616c96114",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devlaketoco-private-rt-2"
            },
            "tags_all": {
              "Name": "devlaketoco-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.devlake_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:route-table/rtb-0a35228f8746da6fb",
            "id": "rtb-0a35228f8746da6fb",
            "owner_id": "145702441124",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2b16ccf5ca1b85a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devlaketoco-public-rt"
            },
            "tags_all": {
              "Name": "devlaketoco-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devlake_igw",
            "aws_vpc.devlake_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0735f8f2670ec8ae2",
            "route_table_id": "rtb-059b06a9c9d4dd519",
            "subnet_id": "subnet-0a7ce045e02a84fac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.devlake_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e09f4286a2e7de",
            "route_table_id": "rtb-0a121595cfb7e8357",
            "subnet_id": "subnet-0d40f64710ad4e1b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.devlake_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019b27b349b84f481",
            "route_table_id": "rtb-0a35228f8746da6fb",
            "subnet_id": "subnet-0b6790c1433e0e0f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devlake_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d04a63563be493de",
            "route_table_id": "rtb-0a35228f8746da6fb",
            "subnet_id": "subnet-0eb2243349e6f2a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devlake_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:subnet/subnet-0a7ce045e02a84fac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7ce045e02a84fac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145702441124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devlaketoco-private-subnet-1"
            },
            "tags_all": {
              "Name": "devlaketoco-private-subnet-1"
            },
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:subnet/subnet-0d40f64710ad4e1b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d40f64710ad4e1b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145702441124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devlaketoco-private-subnet-2"
            },
            "tags_all": {
              "Name": "devlaketoco-private-subnet-2"
            },
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:subnet/subnet-0b6790c1433e0e0f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6790c1433e0e0f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145702441124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devlaketoco-public-subnet-1"
            },
            "tags_all": {
              "Name": "devlaketoco-public-subnet-1"
            },
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:subnet/subnet-0eb2243349e6f2a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb2243349e6f2a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145702441124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devlaketoco-public-subnet-2"
            },
            "tags_all": {
              "Name": "devlaketoco-public-subnet-2"
            },
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devlake_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:vpc/vpc-0a8bd81cd610eaecb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01344fce497e8a2c6",
            "default_route_table_id": "rtb-064b93b3da75088f6",
            "default_security_group_id": "sg-0b51d62bb307fba9b",
            "dhcp_options_id": "dopt-02d1680260f9e630e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8bd81cd610eaecb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064b93b3da75088f6",
            "owner_id": "145702441124",
            "tags": {
              "Name": "devlaketoco-vpc"
            },
            "tags_all": {
              "Name": "devlaketoco-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.devlake",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:security-group/sg-0f60acd75d675d059",
            "description": "Security group for DevLake ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f60acd75d675d059",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devlake-alb",
            "name_prefix": "",
            "owner_id": "145702441124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devlaketoco"
            },
            "tags_all": {
              "Name": "devlaketoco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.devlake",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:security-group/sg-0ee2e1df9128f5dc6",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee2e1df9128f5dc6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB to Config UI",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f60acd75d675d059"
                ],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB to DevLake API",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f60acd75d675d059"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB to Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f60acd75d675d059"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from other ECS tasks to Config UI",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from other ECS tasks to DevLake API",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from other ECS tasks to Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3000
              }
            ],
            "name": "devlake-ecs-tasks",
            "name_prefix": "",
            "owner_id": "145702441124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devlaketoco"
            },
            "tags_all": {
              "Name": "devlaketoco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc",
            "module.devlake.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.devlake",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:security-group/sg-07749d203b988716a",
            "description": "Security group for Grafana EFS mount targets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07749d203b988716a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow NFS access from ECS tasks",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee2e1df9128f5dc6"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "grafana-efs",
            "name_prefix": "",
            "owner_id": "145702441124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devlaketoco"
            },
            "tags_all": {
              "Name": "devlaketoco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc",
            "module.devlake.aws_security_group.alb",
            "module.devlake.aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "module": "module.devlake",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:security-group/sg-0b67d79aadeac98a0",
            "description": "Security group for DevLake RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b67d79aadeac98a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access from ECS tasks",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee2e1df9128f5dc6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "devlake-rds",
            "name_prefix": "",
            "owner_id": "145702441124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devlaketoco"
            },
            "tags_all": {
              "Name": "devlaketoco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc",
            "module.devlake.aws_security_group.alb",
            "module.devlake.aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "module": "module.devlake.module.devlake_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:loadbalancer/app/devlake-alb/87dc9036a1b237e9",
            "arn_suffix": "app/devlake-alb/87dc9036a1b237e9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devlake-alb-1380464767.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:145702441124:loadbalancer/app/devlake-alb/87dc9036a1b237e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devlake-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d92d4fe912a13040",
              "sg-0f60acd75d675d059"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b6790c1433e0e0f0"
              },
              {
                "subnet_id": "subnet-0eb2243349e6f2a92"
              }
            ],
            "subnets": [
              "subnet-0b6790c1433e0e0f0",
              "subnet-0eb2243349e6f2a92"
            ],
            "tags": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0a8bd81cd610eaecb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available",
            "module.devlake.aws_security_group.alb",
            "module.devlake.module.devlake_alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.devlake.module.devlake_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:listener/app/devlake-alb/87dc9036a1b237e9/673e569b7cf87c6f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145702441124:listener/app/devlake-alb/87dc9036a1b237e9/673e569b7cf87c6f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:loadbalancer/app/devlake-alb/87dc9036a1b237e9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.devlake_cert",
            "aws_acm_certificate_validation.devlake_cert",
            "aws_route53_record.cert_validation",
            "aws_route53_zone.devlake_zone",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.existing_zone",
            "module.devlake.aws_security_group.alb",
            "module.devlake.module.devlake_alb.aws_lb.this",
            "module.devlake.module.devlake_alb.aws_lb_target_group.this",
            "module.devlake.module.devlake_alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:listener/app/devlake-alb/87dc9036a1b237e9/8b9803ee50c60c15",
            "certificate_arn": "arn:aws:acm:us-east-1:145702441124:certificate/dab8035a-5c9c-4bf9-bd15-81ef8cf3b6a8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:targetgroup/devlake-config-ui-tg/f82a0bcabf313c3a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145702441124:listener/app/devlake-alb/87dc9036a1b237e9/8b9803ee50c60c15",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:loadbalancer/app/devlake-alb/87dc9036a1b237e9",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.devlake_cert",
            "aws_acm_certificate_validation.devlake_cert",
            "aws_route53_record.cert_validation",
            "aws_route53_zone.devlake_zone",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.existing_zone",
            "module.devlake.aws_security_group.alb",
            "module.devlake.module.devlake_alb.aws_lb.this",
            "module.devlake.module.devlake_alb.aws_lb_target_group.this",
            "module.devlake.module.devlake_alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.devlake.module.devlake_alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "https/grafana",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:targetgroup/devlake-grafana-tg/2ce0e3cbbddb96c9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:listener-rule/app/devlake-alb/87dc9036a1b237e9/8b9803ee50c60c15/826d011c124e5f29",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "devlake.devlaketoco.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/grafana",
                      "/grafana/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145702441124:listener-rule/app/devlake-alb/87dc9036a1b237e9/8b9803ee50c60c15/826d011c124e5f29",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:listener/app/devlake-alb/87dc9036a1b237e9/8b9803ee50c60c15",
            "priority": 100,
            "tags": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.devlake_cert",
            "aws_acm_certificate_validation.devlake_cert",
            "aws_route53_record.cert_validation",
            "aws_route53_zone.devlake_zone",
            "aws_subnet.public_subnets",
            "aws_vpc.devlake_vpc",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.existing_zone",
            "module.devlake.aws_security_group.alb",
            "module.devlake.module.devlake_alb.aws_lb.this",
            "module.devlake.module.devlake_alb.aws_lb_listener.this",
            "module.devlake.module.devlake_alb.aws_lb_target_group.this",
            "module.devlake.module.devlake_alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.devlake.module.devlake_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "devlake-config-ui-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:targetgroup/devlake-config-ui-tg/f82a0bcabf313c3a",
            "arn_suffix": "targetgroup/devlake-config-ui-tg/f82a0bcabf313c3a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145702441124:targetgroup/devlake-config-ui-tg/f82a0bcabf313c3a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:145702441124:loadbalancer/app/devlake-alb/87dc9036a1b237e9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devlake-config-ui-tg",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "devlake-grafana-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145702441124:targetgroup/devlake-grafana-tg/2ce0e3cbbddb96c9",
            "arn_suffix": "targetgroup/devlake-grafana-tg/2ce0e3cbbddb96c9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145702441124:targetgroup/devlake-grafana-tg/2ce0e3cbbddb96c9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:145702441124:loadbalancer/app/devlake-alb/87dc9036a1b237e9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devlake-grafana-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.devlake.module.devlake_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145702441124:security-group/sg-0d92d4fe912a13040",
            "description": "Security group for devlake-alb application load balancer",
            "egress": [],
            "id": "sg-0d92d4fe912a13040",
            "ingress": [],
            "name": "devlake-alb-20250703032252502800000002",
            "name_prefix": "devlake-alb-",
            "owner_id": "145702441124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "devlaketoco",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8bd81cd610eaecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devlake_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}